--- a/front-end/css/style.css
+++ b/front-end/css/style.css
@@ -202,10 +202,8 @@ nav {
 .command__button {
     border-radius: 30px;
     padding: 10px;
-    width: auto;
-    margin-left: 40rem;
-    margin-right: 40rem;
     margin-top: 20px;
+    background-color:cadetblue;
 }
 
 footer {
