--- a/front-end/css/style.css
+++ b/front-end/css/style.css
@@ -1,20 +1,22 @@
 /* CSS */
-* { 
+
+* {
     /* width: auto;
     height: auto;  */
     margin: 0;
     padding: 0;
-   
 }
+
 body {
-    background-color:lightsalmon;
+    background-color: lightsalmon;
 }
+
 div {
     font-size: 1.6rem;
 }
 
 :root {
-    font-size: 62,5%;
+    font-size: 62, 5%;
 }
 
 #logo {
@@ -22,32 +24,32 @@ div {
     margin-right: 8px;
     height: 35px;
     width: 35px;
+    justify-content: baseline;
 }
- 
+
 nav {
     height: auto;
     margin-bottom: 40px;
 }
-.navbar-brand {
-     height: 25px;
+
+#navbarContent {
+    text-align: right;
 }
 
-#navbarContent{
-    justify-content: end;
-}
-
-#logo__basket{
+#logo__basket {
     width: 35px;
     height: 35px;
     padding-bottom: 5px;
-    
 }
+
 .main {
-   margin-bottom: 5rem;
+    margin-bottom: 5rem;
 }
+
 .title {
     padding: 40px;
 }
+
 .products {
     display: flex;
     flex-wrap: wrap;
@@ -59,28 +61,38 @@ nav {
 .card {
     display: flex;
     flex-direction: column;
-    height: 70vh;
+    height: 60vh;
     width: 40vw;
-    margin: 20px 15px 20px 15px;
+    margin: 20px 10px 20px 10px;
     padding: 5px;
     background-color: white;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     border-radius: 20px;
 }
 
-.card-img-top{
-    border-radius: 20px 20px 0 0 ;
+.card-img-top {
+    border-radius: 20px 20px 0 0;
     height: 70%;
 }
 
 .card-body {
     text-align: center;
     background-color: white;
+    overflow: auto;
 }
+
+.product__price {
+    padding: 0;
+    margin: 0;
+}
+
+.product__name {
+    padding: 0;
+    margin: 0;
+}
+
 .product-container {
-   min-height: 80vh;
-
-
+    min-height: 80vh;
 }
 
 #card-product {
@@ -102,21 +114,21 @@ nav {
 .addConfirmation {
     background-color: green;
     color: white;
-   
 }
+
 #buttons {
     display: flex;
     justify-content: space-between;
     padding: 1rem;
 }
+
 .addPanier {
     border-radius: 20px;
     padding: 8px;
     background-color: green;
-  }
+}
 
 .retour {
-
     border-radius: 20px;
     padding: 8px;
     background-color: cornflowerblue;
@@ -125,6 +137,7 @@ nav {
 .retour a {
     color: black;
 }
+
 .table h2 {
     margin: 3rem;
     color: green;
@@ -134,29 +147,30 @@ nav {
     width: 30px;
     height: 30px;
 }
-#table__panier{
+
+#table__panier {
     border: 3px solid black;
     margin: 1.2rem;
     background-color: linen;
 }
+
 .container-recapitulatif {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     width: auto;
-    margin:0;
-    padding:10px;
+    margin: 0;
+    padding: 10px;
     border: 2px solid black;
     text-align: initial;
-   
 }
 
 .container-montant-total {
     display: flex;
     flex-direction: row;
-    justify-content:space-evenly;
+    justify-content: space-evenly;
     width: auto;
-    background-color:rgb(91, 179, 91); 
+    background-color: rgb(91, 179, 91);
     margin: 3rem;
     height: auto;
 }
@@ -164,15 +178,16 @@ nav {
 .container-panier-vide {
     width: auto;
     height: 50vh;
-    background-color:silver;
+    background-color: silver;
     text-align: center;
     justify-content: center;
 }
 
 .buttons {
     display: flex;
-    justify-content:space-around;
+    justify-content: space-around;
 }
+
 .ajout {
     border-radius: 40px;
     padding: 20px;
@@ -192,16 +207,15 @@ nav {
     width: auto;
     padding: 15px;
     margin: 5% 15% 5% 15%;
-    background-color:linen;
+    background-color: linen;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     border-radius: 20px;
- 
 }
 
 .form {
     display: flex;
     flex-direction: column;
-     width: 90%;
+    width: 90%;
     padding-left: 130px;
 }
 
@@ -209,12 +223,13 @@ nav {
     border-radius: 30px;
     padding: 10px;
     margin-top: 20px;
-    background-color:cadetblue;
+    background-color: cadetblue;
 }
 
 .infoVide {
     color: red;
 }
+
 .infoFormVide {
     color: red;
     text-align: center;
@@ -225,84 +240,71 @@ footer {
     bottom: 0;
     right: 0;
     left: 0;
-
 }
 
-
 @media screen and (max-width: 425px) {
-
+    #logo__basket {
+        width: 25px;
+        height: 25px;
+        padding-bottom: 5px;
+    }
     .title {
-        padding: 10px;
+        padding: 2px;
     }
     .card {
         width: 100%;
-        height: 60vh;
+        min-height: 30vh;
+        max-height: 50vh;
     }
-    .card-img-top{
-        border-radius: 20px 20px 0 0 ;
+    .card-img-top {
+        border-radius: 20px 20px 0 0;
         height: 60%;
     }
     .card-body {
         height: auto;
+        overflow: auto;
         padding: 0;
-        margin: 0;
-        justify-content: stretch;
     }
-    .card-body p{
-        margin: 3px;
-    }
-
     #card-product {
         width: auto;
         margin: 2%;
     }
-
-    .table{
+    .table {
         margin: 0.5rem;
         width: auto;
     }
-
-     #table__panier{
+    #table__panier {
         margin: 0.1rem;
     }
-     .container-recapitulatif {
+    .container-recapitulatif {
         display: flex;
         flex-direction: column;
         flex-wrap: wrap;
         padding: 0;
-
-       
     }
     .info {
         padding: 2px;
     }
-
     #table__total {
-         margin: 15px 0px 15px -20px;
-         width: auto;
+        margin: 15px 0px 15px -20px;
+        width: auto;
     }
-   .container-montant-total {
+    .container-montant-total {
         display: flex;
         flex-direction: row;
-        justify-content:space-between;
+        justify-content: space-between;
         /* margin: 15px 5px 15px 25px; */
         max-height: 8vh;
-      
     }
-     
-    
     .container-panier-vide {
-       max-width: 90vw;
-       max-height: 50vh;
-       margin: 2%;
-
+        max-width: 90vw;
+        max-height: 50vh;
+        margin: 2%;
     }
-   
-    
     .buttons {
         margin: 15px;
         display: flex;
-        justify-content:space-around;
+        justify-content: space-around;
     }
     .ajout {
         border-radius: 20px;
@@ -311,89 +313,76 @@ footer {
         height: 8vh;
         font-size: initial;
     }
-    
     .supprimer {
         border-radius: 20px;
         height: 8vh;
         font-size: initial;
-    } 
+    }
     .card__form {
         margin: 2% 2% 40% 2;
-
     }
-
     .form {
-         width: 100%;
+        width: 100%;
         padding-left: 0;
     }
-    
     .command__button {
         margin: 20px 0 20px 0;
     }
-
     footer {
         position: relative;
     }
-
 }
 
-
 @media screen and (max-width: 768px) {
-
+    #logo__basket {
+        width: 25px;
+        height: 25px;
+        padding-bottom: 5px;
+    }
     .title {
         padding: 15px;
     }
     .card {
-        width: 100%;
-        height: 80vh;
+        width: 80%;
+        height: 60vh;
     }
-    .card-img-top{
-        border-radius: 20px 20px 0 0 ;
+    .card-img-top {
+        border-radius: 20px 20px 0 0;
         height: 70%;
     }
     .card-body {
         height: auto;
-        padding: 0;
-        margin: 0;
-        justify-content: stretch;
+        overflow: auto;
+        padding: 2px;
     }
-
     #card-product {
         width: auto;
         margin: 2%;
     }
     #productNumber {
-       margin-top: 2px;
+        margin-top: 2px;
     }
-
     .container-montant-total {
-        justify-content:space-around;
+        justify-content: space-around;
         margin: 15px 5px 15px 45px;
         width: 90%;
         max-height: 8vh;
     }
-
     .container-panier-vide {
-       max-width: 90vw;
-       max-height: 50vh;
-       margin: 2%;
-
+        max-width: 90vw;
+        max-height: 50vh;
+        margin: 2%;
     }
-
     .card__form {
         margin: 2% 2% 40% 2;
-
     }
-
     .form {
-         width: 100%;
+        width: 100%;
         padding-left: 0;
     }
-    
     .command__button {
         margin: 20px 0 20px 0;
     }
-
     footer {
         position: relative;
     }
