--- a/front-end/css/style.css
+++ b/front-end/css/style.css
@@ -306,10 +306,14 @@
                     max-height: 8vh;
                 }
                 .container-panier-vide {
-                    max-width: 90vw;
-                    max-height: 50vh;
+                    width: 100%;
+                    height: 50vh;
                     margin: 2%;
                 }
+                .card.container-panier-vide {
+                    width: 100%;
+                   
+                 }
                 .buttons {
                     margin: 15px;
                     display: flex;
@@ -386,6 +390,10 @@
                     max-height: 50vh;
                     margin: 2%;
                 }
+                .card.container-panier-vide {
+                    width: 100%;
+                   
+                 }
                 .card__form {
                     margin: 2% 2% 40% 2;
                 }
